fixed issue 42066: truncated year in date picker
Date picker truncates year in some browser/OS combinations.

The problem is caused by font and weight selection making year legth
longer than maximum.

Removing "bold" weight is enough to fit it.

--- a/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.application/ob-form-styles.css
+++ b/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.application/ob-form-styles.css
@@ -11,7 +11,7 @@
  * under the License.
  * The Original Code is Openbravo ERP.
  * The Initial Developer of the Original Code is Openbravo SLU
- * All portions are Copyright (C) 2010-2016 Openbravo SLU
+ * All portions are Copyright (C) 2010-2019 Openbravo SLU
  * All Rights Reserved.
  * Contributor(s):  ______________________________________.
  ************************************************************************
@@ -645,7 +645,11 @@ html[data-useragent*='MSIE 7.0'] .OBFormFieldError .OBFormFieldDateInputHint {
 .OBDateChooserWeekendButtonDown,
 .OBDateChooserWeekendButtonSelected,
 .OBDateChooserWeekendButtonSelectedOver,
-.OBDateChooserWeekendButtonSelectedDown,
+.OBDateChooserWeekendButtonSelectedDown {
+  color: #4C4C4C;
+  font-weight: bold;
+}
+
 .OBDateChooserNavButton,
 .OBDateChooserNavButtonOver,
 .OBDateChooserNavButtonDown,
@@ -655,7 +659,6 @@ html[data-useragent*='MSIE 7.0'] .OBFormFieldError .OBFormFieldDateInputHint {
 .OBDateChooserNavButtonSelected,
 .OBDateChooserNavButtonSelectedOver,
 .OBDateChooserNavButtonSelectedDown {
-  font-weight: bold;
   color: #4C4C4C;
 }
 
